# AI-Medical-Disease-Diagnosis-System

./: .replit  PROJECT_SUMMARY.md  README.md  TRAINING_GUIDE.md  app.py  generate_academic_proposal.py  generate_project_pdf.py  pyproject.toml  replit.md
.streamlit/: config.toml
models/: audio_model.py  colorblind_model.py  heart_model.py  pneumonia_model.py  skin_model.py
training/: train_models.py
utils/: fusion_engine.py  nlp_processor.py  pdf_generator.py
